Work in progress for #3

--- a/adm/style/css/default_avatar_preview.css
+++ b/adm/style/css/default_avatar_preview.css
@@ -4,7 +4,13 @@
  * @copyright (c) 2015 Alfredo Ramos
  * @license GNU GPL 2.0 <https://www.gnu.org/licenses/gpl-2.0.txt>
  */
-
+.avatar-preview {
+	display: inline-block;
+	margin: 0 10px 10px 0;
+}
+.avatar-preview:last-child {
+	margin-right: 0;
+}
 noscript {
 	display: block;
 	color: #fff !important;
